# git-bisectlib

./: .gitignore  DEPENDENCIES.md  README.md  SPEC.md  bisectlib.py  bisectlog.py  pyproject.toml
bisectlib/: __init__.py  _report.py
bisectlog/: __init__.py
examples/: flaky_hunt.py  flaky_with_fixup.py  metric_binary_size.py  perf_regression.py
tests/: test_bisectlib.py  test_bisectlog.py  test_no_dependencies.py  test_report.py
